Login RBAC changes.

--- a/oasis-poc/.env.example
+++ b/oasis-poc/.env.example
@@ -3,4 +3,17 @@ OPENAI_API_KEY=your-openai-key
 LLM_MODEL=gpt-4o-mini
 LLM_PROVIDER=openai
 MOCK_MODE=true
+OASIS_STORE_PATH=oasis_store.json
 ALLOWED_ORIGINS=*
+
+# RBAC / auth (PoC)
+# - disabled: no JWT required; roles come from OASIS_DEFAULT_ROLES (and optionally x-user-role header)
+# - api_key: same as disabled, typically paired with APP_API_KEY
+# - jwt: validate Bearer JWT (HS256 or RS256) and enforce roles per endpoint
+OASIS_AUTH_MODE=disabled
+OASIS_DEFAULT_ROLES=analyst
+OASIS_JWT_ISSUER=
+OASIS_JWT_AUDIENCE=
+OASIS_JWT_JWKS_URL=
+OASIS_JWT_ROLES_CLAIM=
+OASIS_JWT_SECRET=
