--- a/oasis-poc/frontend/.env.example
+++ b/oasis-poc/frontend/.env.example
@@ -1,6 +1,17 @@
-﻿VITE_API_BASE=http://localhost:8000/api/v1
+VITE_API_BASE=http://localhost:8000/api/v1
 VITE_AUTH0_DOMAIN=mypersonalai.us.auth0.com
 VITE_AUTH0_CLIENT_ID=J1bFbQluKoL5eDeWgqaNhzpM10nEKKty
-VITE_AUTH0_AUDIENCE=
+VITE_AUTH0_AUDIENCE=https://oasis-api
 VITE_AUTH0_REDIRECT_URI=http://localhost:5173
 VITE_AUTH0_LOGOUT_URI=http://localhost:5173
+
+# Optional: claim key that contains roles/groups (Auth0 Action recommended).
+# Example: https://oasis.ai/roles -> ["admin","analyst","reviewer"]
+VITE_AUTH0_ROLES_CLAIM=http://localhost:5173/roles
+
+# Optional: fallback role when roles claim is missing (dev convenience).
+VITE_DEFAULT_ROLE=REVIEWER
+
+# Optional: local demo mode (skips Auth0 entirely)
+# VITE_AUTH_DISABLED=true
+# VITE_DEMO_ROLES=admin,analyst,reviewer
