Login Landing page changes.

--- a/oasis-poc/frontend/.env.example
+++ b/oasis-poc/frontend/.env.example
@@ -1,7 +1,7 @@
 VITE_API_BASE=http://localhost:8000/api/v1
 VITE_AUTH0_DOMAIN=mypersonalai.us.auth0.com
 VITE_AUTH0_CLIENT_ID=J1bFbQluKoL5eDeWgqaNhzpM10nEKKty
-VITE_AUTH0_AUDIENCE=https://oasis-api
+VITE_AUTH0_AUDIENCE=https://oasis-api/
 VITE_AUTH0_REDIRECT_URI=http://localhost:5173
 VITE_AUTH0_LOGOUT_URI=http://localhost:5173
 
@@ -11,6 +11,9 @@ VITE_AUTH0_ROLES_CLAIM=http://localhost:5173/roles
 
 # Optional: fallback role when roles claim is missing (dev convenience).
 VITE_DEFAULT_ROLE=REVIEWER
+
+# Optional: force Universal Login UI (helpful for debugging SSO/session redirects)
+# VITE_AUTH0_FORCE_PROMPT_LOGIN=true
 
 # Optional: local demo mode (skips Auth0 entirely)
 # VITE_AUTH_DISABLED=true
