--- a/oasis-poc/docker-compose.yml
+++ b/oasis-poc/docker-compose.yml
@@ -1,10 +1,10 @@
-version: "3.9"
-
 services:
   backend:
     build:
       context: .
       dockerfile: backend/Dockerfile
+      args:
+        CUSTOM_CA_CERT: ${CUSTOM_CA_CERT-}
     env_file: .env
     ports:
       - "8000:8000"
@@ -18,6 +18,7 @@ services:
       context: .
       dockerfile: frontend/Dockerfile
       args:
+        CUSTOM_CA_CERT: ${CUSTOM_CA_CERT-}
         VITE_API_BASE: http://localhost:8000/api/v1
         VITE_APP_API_KEY: dev-secret
         VITE_AUTH0_REDIRECT_URI: http://localhost:8080
