Incorporated Review comments

--- a/oasis-poc/.env.example
+++ b/oasis-poc/.env.example
@@ -5,6 +5,9 @@ LLM_PROVIDER=openai
 MOCK_MODE=true
 OASIS_STORE_PATH=oasis_store.json
 ALLOWED_ORIGINS=*
+CORS_ALLOW_CREDENTIALS=false
+SERVE_FRONTEND=true
+FRONTEND_DIST_PATH=
 
 # RBAC / auth (PoC)
 # - disabled: no JWT required; roles come from OASIS_DEFAULT_ROLES (and optionally x-user-role header)
